0.6.0 (trunk):
* Reenable Async SSL by default.

0.5.0 (2014-04-13):
* First public release.